--- a/theme/templates/404.liquid
+++ b/theme/templates/404.liquid
@@ -1,7 +1,7 @@
 <div class="container">
 
   <h1 class="centered hidden">404 Page Not Found</h1>
-  <h2 class="delta centered hidden">The page you requested does not exist. Click <a href="/collections/all">here</a> to continue shopping.</h2>
+  <h2 class="delta centered hidden">The page you requested does not exist. Click <a rv-route="" href="/collections/all">here</a> to continue shopping.</h2>
 
 </div>
 
