--- a/theme/templates/cart.liquid
+++ b/theme/templates/cart.liquid
@@ -1,7 +1,8 @@
 <div class="container-fluid pt-5">
   <div class="row pt-5">
     <div class="col col-md-8 col-lg-6 mx-auto">
-      <h1>The shopping bag is not yet unlocked, but this will be the case in a few weeks.<br />Many Thanks.</h1>
+      <p>The shopping bag is not yet unlocked, but this will be the case in a few weeks.<br />Many Thanks.</p>
+      <p><a rv-route="'/collections/all'" href="/collections/all">Back to products</a></p>
     </div>
   </div>
 </div>
