--- a/theme/templates/product.liquid
+++ b/theme/templates/product.liquid
@@ -122,7 +122,7 @@
 
   <div class="container-fluid fixed-bottom">
     <div class="row">
-      <div class="col-6">
+      <div class="col-6 pb-5 pb-lg-0">
         <div class="variant-chooser">
           <div rv-each-option="product.options" class="row px-3" rv-class="option.name | downcase" rv-if="option.name | downcase | eq 'color'">
             <div rv-each-color="option.values" class="col-auto px-1 cursor-pointer" rv-on-click="onClickColor | args color">
