--- a/src/scss/templates/_footer.scss
+++ b/src/scss/templates/_footer.scss
@@ -1,7 +1,41 @@
 #layout-bottom {
-  .active {
+  .active, :focus {
     rv-icon {
-      color: $blue; // $pink;
+      color: $pink;
     }
   }
+
+  .nav-item:first-child {
+    .nav-link {
+      padding-left: 0;
+    }
+  }
+  
+  .nav-item:last-child {
+    .nav-link {
+      padding-right: 0;
+    }
+  }
+
+}
+
+.logo-text-lg {
+  letter-spacing: .1rem;
+  font-weight: bold;
+  font-size: 1rem;
+  a {
+    display: inline-block;
+    text-decoration: none;
+  }
+}
+
+.fullscreen-menu {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255,255,255,0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
