--- a/theme/assets/favicon-browserconfig.xml.liquid
+++ b/theme/assets/favicon-browserconfig.xml.liquid
@@ -3,7 +3,7 @@
     <msapplication>
         <tile>
             <square150x150logo src="{{ 'favicon-mstile-150x150.png' | asset_url }}"/>
-            <TileColor>#ffffff</TileColor>
+            <TileColor>#D9998F</TileColor>
         </tile>
     </msapplication>
 </browserconfig>
