--- a/theme/layout/theme.liquid
+++ b/theme/layout/theme.liquid
@@ -3,6 +3,9 @@
 <head class="no-js">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="theme-color" content="#D9998F">
+  <meta name="msapplication-navbutton-color" content="#D9998F" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>
