--- a/theme/templates/page.liquid
+++ b/theme/templates/page.liquid
@@ -1,13 +1,13 @@
-<div class="container-fluid pt-5">
+<div class="container-fluid pt-5 mt-md-5">
   <div class="row">
     {% unless page.title == blank %}
-      <div class="col-xs-12 text-left">
+      <div class="col-12 col-md-10 offset-md-2 text-left">
         <h1 class="page-title mt-0 mb-4">{{ page.title }}</h1>
       </div>
     {% endunless %}
 
     {% unless page.content == blank %}
-        <div class="col-xs-12 rte">
+        <div class="col-12 col-md-10 offset-md-2 rte">
         {{ page.content }}
         </div>
     {% endunless %}
